# blogV2

./: .gitignore
backend/: Cargo.toml  README.md  wrangler.toml
backend/sql/: scheme.sql  test_data.sql
backend/src/: format.rs  lib.rs
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/article/[id]/: page.tsx
frontend/src/app/list/: page.tsx
frontend/src/components/: MarkdownRenderer.tsx  adryHeader.tsx  articleList.tsx  fadein.tsx  footer.tsx  loading.tsx  twitter.tsx
frontend/src/lib/: api.ts
notion-to-md-proxy/: package.json  pnpm-lock.yaml  wrangler.jsonc
notion-to-md-proxy/src/: index.ts
notion-to-md-proxy/test/: env.d.ts
