[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["ardririy <hynnkgw27@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ['http', 'axum'] }
worker-macros = { version = "0.6.0", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
